main/default/objects/Agency_License__c/Agency_License__c.object-meta.xml
<CustomObject>
    <label>Agency License</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Agency License Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>