main/default/objects/Agency_License__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency Licenses</relationshipLabel>
    <relationshipName>Agency_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>