main/default/objects/Agency_License__c/fields/Home_State_License__c.field-meta.xml
<CustomField>
    <fullName>Home_State_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home State License</label>
    <type>Checkbox</type>
</CustomField>