main/default/objects/Agency_License__c/fields/MRe_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>MRe_Email_Date__c</fullName>
    <label>MRe Email Date</label>
    <type>DateTime</type>
</CustomField>