main/default/objects/Agency_License__c/fields/MRe_PIF_Submitted__c.field-meta.xml
<CustomField>
    <fullName>MRe_PIF_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MRe PIF Submitted</label>
    <type>Checkbox</type>
</CustomField>