main/default/objects/Agency_License__c/fields/NIPR_License_Status__c.field-meta.xml
<CustomField>
    <fullName>NIPR_License_Status__c</fullName>
    <label>NIPR License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>