main/default/objects/Agency_License__c/fields/NPN__c.field-meta.xml
<CustomField>
    <fullName>NPN__c</fullName>
    <label>NPN (National producer number)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>