main/default/objects/Agency_License__c/recordTypes/MRe_Appointment.recordType-meta.xml
<RecordType>
    <fullName>MRe_Appointment</fullName>
    <active>true</active>
    <label>MRe Appointment</label>
</RecordType>